syntax = "proto3";

package greet;

option java_package = "com.rajni.grpc.greeting";
option java_multiple_files = true;

message Greeting {
  string first_name = 1;
  string last_name = 2;
}

message GreetRequest {
  Greeting request = 1;
}

message GreetResponse {
  string result = 1;
}

message GreetManyTimesRequest {
  GreetRequest request = 1;
}

message GreetManyTimesResponse {
  string result = 1;
}

message LongGreetRequest {
  GreetRequest request = 1;
}

message LongGreetResponse {
  string result = 1;
}

service GreetService {
  //Unary
  rpc Greet(GreetRequest) returns (GreetResponse) {};

  //Server Streaming
  rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {};

  //client Streaming
  rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse) {};
}